# PAOO

./: .gitignore  CMakeLists.txt
inc/: Playlist.hpp  Song.hpp
src/: Playlist.cpp  Song.cpp  main.cpp  proiect
